// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expense list with empty message 1`] = `
<div
  className="content-container"
>
  <h1>
    Expense List
  </h1>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <p>
      No Expenses
    </p>
  </div>
</div>
`;

exports[`should render expense list with expenses 1`] = `
<div
  className="content-container"
>
  <h1>
    Expense List
  </h1>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={15000000}
      createdAt={0}
      description="Water"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={2500000}
      createdAt={345600000}
      description="Rent"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={400000}
      createdAt={-345600000}
      description="Internet"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
